crates/rome_js_formatter/tests/specs/prettier/js/with/indent.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
with (0) {}

with (0) 1;
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,4 +1,3 @@
-with (0) {
-}
+with (0) {}
 
 with (0) 1;
```

# Output

```js
with (0) {}

with (0) 1;
```


# Errors
```
error[SyntaxError]: `with` statements are not allowed in strict mode
  ┌─ indent.js:1:1
  │
1 │ with (0) {}
  │ ^^^^^^^^^^^

error[SyntaxError]: `with` statements are not allowed in strict mode
  ┌─ indent.js:3:1
  │
3 │ with (0) 1;
  │ ^^^^^^^^^^^


```


